minor fix in blog overflow

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2480,7 +2480,8 @@ label.error {
   }
   .description {
     height: 170px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     // min-height: 132px;
     text-overflow: ellipsis;
     // margin-bottom: 25px;
